// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsList renders List correctly 1`] = `
<div
  className="ms-Viewport"
  style={
    Object {
      "minHeight": 1,
      "minWidth": 1,
    }
  }
>
  <div
    aria-label={undefined}
    className=
        ms-DetailsList
        is-horizontalConstrained
        {
          -webkit-overflow-scrolling: touch;
          background: #ffffff;
          color: #333333;
          font-size: 12px;
          overflow-x: auto;
          overflow-y: visible;
          position: relative;
        }
        & .ms-List-cell {
          min-height: 38px;
          word-break: break-word;
        }
    data-automationid="DetailsList"
    data-is-scrollable="false"
  >
    <div
      aria-colcount={2}
      aria-label={undefined}
      aria-readonly="true"
      aria-rowcount={6}
      role="grid"
    >
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          className=
              ms-FocusZone
              ms-DetailsHeader
              {
                background: #ffffff;
                border-bottom: 1px solid #c8c8c8;
                box-sizing: content-box;
                cursor: default;
                display: inline-block;
                height: 32px;
                line-height: 32px;
                min-width: 100%;
                padding-bottom: 1px;
                position: relative;
                user-select: none;
                vertical-align: top;
                white-space: nowrap;
              }
              &:hover $check {
                opacity: 1;
              }
              & ms-TooltipHost $checkTooltip {
                display: block;
              }
          data-automationid="DetailsHeader"
          data-focuszone-id="FocusZone1"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseMove={[Function]}
          role="row"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            aria-colindex={1}
            aria-labelledby="header0-check"
            className=
                ms-DetailsHeader-cell
                ms-DetailsHeader-cellIsCheck
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  align-items: center;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  outline: transparent;
                  padding-bottom: 0px;
                  padding-left: 0px;
                  padding-right: 0px;
                  padding-top: 0px;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
            onClick={[Function]}
            role="columnheader"
          >
            <span
              className=


            >
              <div
                aria-checked={undefined}
                aria-describedby="header0-checkTooltip"
                aria-label={undefined}
                className=
                    ms-DetailsRow-check
                    ms-DetailsRow-check--isHeader
                    {
                      height: 32px;
                    }
                    .ms-Fabric--isFocusVisible &:focus {
                      opacity: 1;
                    }
                    {
                      align-items: center;
                      background-color: transparent;
                      background: none;
                      border: none;
                      box-sizing: border-box;
                      cursor: default;
                      display: flex;
                      height: 32px;
                      justify-content: center;
                      margin-bottom: 0px;
                      margin-left: 0px;
                      margin-right: 0px;
                      margin-top: 0px;
                      opacity: 0;
                      outline: transparent;
                      padding-bottom: 0px;
                      padding-left: 0px;
                      padding-right: 0px;
                      padding-top: 0px;
                      position: relative;
                      vertical-align: top;
                      width: 40px;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    &:hover {
                      opacity: 1;
                    }

                data-automationid="DetailsRowCheck"
                data-is-focusable={true}
                data-selection-toggle={true}
                id="header0-check"
                role="checkbox"
              >
                <div
                  className=
                      ms-Check
                      {
                        height: 18px;
                        line-height: 1;
                        position: relative;
                        user-select: none;
                        vertical-align: top;
                        width: 18px;
                      }
                      &:before {
                        background: #ffffff;
                        border-radius: 50%;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        opacity: 1;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                      }
                      $checkHost:hover &, $checkHost:focus &, &:hover, &:focus {
                        opacity: 1;
                      }
                >
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-circle
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 18px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: 0px;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          color: WindowText;
                        }
                    data-icon-name="CircleRing"
                    role="presentation"
                  >
                    
                  </i>
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-check
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 16px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: .5px;
                          opacity: 0;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        &:hover {
                          opacity: 1;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          -ms-high-contrast-adjust: none;
                        }
                    data-icon-name="StatusCircleCheckmark"
                    role="presentation"
                  >
                    
                  </i>
                </div>
              </div>
            </span>
          </div>
          <div
            aria-colindex={2}
            aria-sort="none"
            className=
                ms-DetailsHeader-cell
                is-actionable
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-block;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0;
                  margin-left: 0;
                  margin-right: 0;
                  margin-top: 0;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 8px;
                  padding-right: 8px;
                  padding-top: 0;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                &:hover {
                  background: #f4f4f4;
                  color: #333333;
                }
                &:active {
                  background: #eaeaea;
                }
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="key"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 116,
              }
            }
          >
            <span
              className=

                  {
                    bottom: 0px;
                    display: block;
                    left: 0px;
                    position: absolute;
                    right: 0px;
                    top: 0px;
                  }
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header0-key-name "
                className=
                    ms-DetailsHeader-cellTitle
                    {
                      align-items: stretch;
                      box-sizing: border-box;
                      display: flex;
                      flex-direction: row;
                      justify-content: flex-start;
                      outline: transparent;
                      overflow: hidden;
                      padding-bottom: 0;
                      padding-left: 12px;
                      padding-right: 8px;
                      padding-top: 0;
                      position: relative;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                data-is-focusable={true}
                id="header0-key"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className=
                      ms-DetailsHeader-cellName
                      {
                        flex: 0 1 auto;
                        overflow: hidden;
                        text-overflow: ellipsis;
                      }
                  id="header0-key-name"
                >
                  key
                </span>
              </span>
            </span>
          </div>
          <div
            aria-hidden={true}
            className=
                ms-DetailsHeader-cellSizer
                {
                  background: transparent;
                  bottom: 0px;
                  cursor: ew-resize;
                  display: inline-block;
                  height: inherit;
                  outline: transparent;
                  overflow: hidden;
                  position: relative;
                  top: 0px;
                  width: 16px;
                  z-index: 1;
                }
                &::-moz-focus-inner {
                  border: 0px;
                }
                &:after {
                  background: #c8c8c8;
                  bottom: 0px;
                  content: "";
                  left: 50%;
                  opacity: 0;
                  position: absolute;
                  top: 0px;
                  width: 1px;
                }
                &:focus:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &:hover:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &$cellIsResizing:after {
                  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                {
                  margin-bottom: 0px;
                  margin-left: -16px;
                  margin-right: 0px;
                  margin-top: 0px;
                }
            data-is-focusable={false}
            data-sizer-index={0}
            onBlur={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            role="button"
          />
        </div>
      </div>
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-labelledby={undefined}
          className=
              ms-FocusZone
              {
                display: inline-block;
                min-height: 1px;
                min-width: 100%;
              }
          data-focuszone-id="FocusZone2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="presentation"
        >
          <div
            className="ms-SelectionZone"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onMouseDownCapture={[Function]}
            role="presentation"
          >
            <div
              className="ms-List"
              role="presentation"
            >
              <div
                className="ms-List-surface"
                role="presentation"
              >
                <div
                  className="ms-List-page"
                  role="presentation"
                  style={Object {}}
                >
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={0}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={1}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={2}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={3}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={4}
                    role="presentation"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsList renders List in compact mode correctly 1`] = `
<div
  className="ms-Viewport"
  style={
    Object {
      "minHeight": 1,
      "minWidth": 1,
    }
  }
>
  <div
    aria-label={undefined}
    className=
        ms-DetailsList
        ms-DetailsList--Compact
        is-horizontalConstrained
        {
          -webkit-overflow-scrolling: touch;
          background: #ffffff;
          color: #333333;
          font-size: 12px;
          overflow-x: auto;
          overflow-y: visible;
          position: relative;
        }
        & .ms-List-cell {
          min-height: 32px;
          word-break: break-word;
        }
    data-automationid="DetailsList"
    data-is-scrollable="false"
  >
    <div
      aria-colcount={2}
      aria-label={undefined}
      aria-readonly="true"
      aria-rowcount={6}
      role="grid"
    >
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          className=
              ms-FocusZone
              ms-DetailsHeader
              {
                background: #ffffff;
                border-bottom: 1px solid #c8c8c8;
                box-sizing: content-box;
                cursor: default;
                display: inline-block;
                height: 32px;
                line-height: 32px;
                min-width: 100%;
                padding-bottom: 1px;
                position: relative;
                user-select: none;
                vertical-align: top;
                white-space: nowrap;
              }
              &:hover $check {
                opacity: 1;
              }
              & ms-TooltipHost $checkTooltip {
                display: block;
              }
          data-automationid="DetailsHeader"
          data-focuszone-id="FocusZone7"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseMove={[Function]}
          role="row"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            aria-colindex={1}
            aria-labelledby="header6-check"
            className=
                ms-DetailsHeader-cell
                ms-DetailsHeader-cellIsCheck
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  align-items: center;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  outline: transparent;
                  padding-bottom: 0px;
                  padding-left: 0px;
                  padding-right: 0px;
                  padding-top: 0px;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
            onClick={[Function]}
            role="columnheader"
          >
            <span
              className=


            >
              <div
                aria-checked={undefined}
                aria-describedby="header6-checkTooltip"
                aria-label={undefined}
                className=
                    ms-DetailsRow-check
                    ms-DetailsRow-check--isHeader
                    {
                      height: 32px;
                    }
                    .ms-Fabric--isFocusVisible &:focus {
                      opacity: 1;
                    }
                    {
                      align-items: center;
                      background-color: transparent;
                      background: none;
                      border: none;
                      box-sizing: border-box;
                      cursor: default;
                      display: flex;
                      height: 32px;
                      justify-content: center;
                      margin-bottom: 0px;
                      margin-left: 0px;
                      margin-right: 0px;
                      margin-top: 0px;
                      opacity: 0;
                      outline: transparent;
                      padding-bottom: 0px;
                      padding-left: 0px;
                      padding-right: 0px;
                      padding-top: 0px;
                      position: relative;
                      vertical-align: top;
                      width: 40px;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    &:hover {
                      opacity: 1;
                    }

                data-automationid="DetailsRowCheck"
                data-is-focusable={true}
                data-selection-toggle={true}
                id="header6-check"
                role="checkbox"
              >
                <div
                  className=
                      ms-Check
                      {
                        height: 18px;
                        line-height: 1;
                        position: relative;
                        user-select: none;
                        vertical-align: top;
                        width: 18px;
                      }
                      &:before {
                        background: #ffffff;
                        border-radius: 50%;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        opacity: 1;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                      }
                      $checkHost:hover &, $checkHost:focus &, &:hover, &:focus {
                        opacity: 1;
                      }
                >
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-circle
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 18px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: 0px;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          color: WindowText;
                        }
                    data-icon-name="CircleRing"
                    role="presentation"
                  >
                    
                  </i>
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-check
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 16px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: .5px;
                          opacity: 0;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        &:hover {
                          opacity: 1;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          -ms-high-contrast-adjust: none;
                        }
                    data-icon-name="StatusCircleCheckmark"
                    role="presentation"
                  >
                    
                  </i>
                </div>
              </div>
            </span>
          </div>
          <div
            aria-colindex={2}
            aria-sort="none"
            className=
                ms-DetailsHeader-cell
                is-actionable
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-block;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0;
                  margin-left: 0;
                  margin-right: 0;
                  margin-top: 0;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 8px;
                  padding-right: 8px;
                  padding-top: 0;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                &:hover {
                  background: #f4f4f4;
                  color: #333333;
                }
                &:active {
                  background: #eaeaea;
                }
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="key"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 116,
              }
            }
          >
            <span
              className=

                  {
                    bottom: 0px;
                    display: block;
                    left: 0px;
                    position: absolute;
                    right: 0px;
                    top: 0px;
                  }
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header6-key-name "
                className=
                    ms-DetailsHeader-cellTitle
                    {
                      align-items: stretch;
                      box-sizing: border-box;
                      display: flex;
                      flex-direction: row;
                      justify-content: flex-start;
                      outline: transparent;
                      overflow: hidden;
                      padding-bottom: 0;
                      padding-left: 12px;
                      padding-right: 8px;
                      padding-top: 0;
                      position: relative;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                data-is-focusable={true}
                id="header6-key"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className=
                      ms-DetailsHeader-cellName
                      {
                        flex: 0 1 auto;
                        overflow: hidden;
                        text-overflow: ellipsis;
                      }
                  id="header6-key-name"
                >
                  key
                </span>
              </span>
            </span>
          </div>
          <div
            aria-hidden={true}
            className=
                ms-DetailsHeader-cellSizer
                {
                  background: transparent;
                  bottom: 0px;
                  cursor: ew-resize;
                  display: inline-block;
                  height: inherit;
                  outline: transparent;
                  overflow: hidden;
                  position: relative;
                  top: 0px;
                  width: 16px;
                  z-index: 1;
                }
                &::-moz-focus-inner {
                  border: 0px;
                }
                &:after {
                  background: #c8c8c8;
                  bottom: 0px;
                  content: "";
                  left: 50%;
                  opacity: 0;
                  position: absolute;
                  top: 0px;
                  width: 1px;
                }
                &:focus:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &:hover:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &$cellIsResizing:after {
                  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                {
                  margin-bottom: 0px;
                  margin-left: -16px;
                  margin-right: 0px;
                  margin-top: 0px;
                }
            data-is-focusable={false}
            data-sizer-index={0}
            onBlur={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            role="button"
          />
        </div>
      </div>
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-labelledby={undefined}
          className=
              ms-FocusZone
              {
                display: inline-block;
                min-height: 1px;
                min-width: 100%;
              }
          data-focuszone-id="FocusZone8"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="presentation"
        >
          <div
            className="ms-SelectionZone"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onMouseDownCapture={[Function]}
            role="presentation"
          >
            <div
              className="ms-List"
              role="presentation"
            >
              <div
                className="ms-List-surface"
                role="presentation"
              >
                <div
                  className="ms-List-page"
                  role="presentation"
                  style={Object {}}
                >
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={0}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={1}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={2}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={3}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={4}
                    role="presentation"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsList renders List in fixed constrained layout correctly 1`] = `
<div
  className="ms-Viewport"
  style={
    Object {
      "minHeight": 1,
      "minWidth": 1,
    }
  }
>
  <div
    aria-label={undefined}
    className=
        ms-DetailsList
        is-fixed
        is-horizontalConstrained
        {
          -webkit-overflow-scrolling: touch;
          background: #ffffff;
          color: #333333;
          font-size: 12px;
          overflow-x: auto;
          overflow-y: visible;
          position: relative;
        }
        & .ms-List-cell {
          min-height: 38px;
          word-break: break-word;
        }
    data-automationid="DetailsList"
    data-is-scrollable="false"
  >
    <div
      aria-colcount={4}
      aria-label={undefined}
      aria-readonly="true"
      aria-rowcount={6}
      role="grid"
    >
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-label={undefined}
          aria-labelledby={undefined}
          className=
              ms-FocusZone
              ms-DetailsHeader
              {
                background: #ffffff;
                border-bottom: 1px solid #c8c8c8;
                box-sizing: content-box;
                cursor: default;
                display: inline-block;
                height: 32px;
                line-height: 32px;
                min-width: 100%;
                padding-bottom: 1px;
                position: relative;
                user-select: none;
                vertical-align: top;
                white-space: nowrap;
              }
              &:hover $check {
                opacity: 1;
              }
              & ms-TooltipHost $checkTooltip {
                display: block;
              }
          data-automationid="DetailsHeader"
          data-focuszone-id="FocusZone4"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseMove={[Function]}
          role="row"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            aria-colindex={1}
            aria-labelledby="header3-check"
            className=
                ms-DetailsHeader-cell
                ms-DetailsHeader-cellIsCheck
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  align-items: center;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-flex;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  outline: transparent;
                  padding-bottom: 0px;
                  padding-left: 0px;
                  padding-right: 0px;
                  padding-top: 0px;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
            onClick={[Function]}
            role="columnheader"
          >
            <span
              className=


            >
              <div
                aria-checked={undefined}
                aria-describedby="header3-checkTooltip"
                aria-label={undefined}
                className=
                    ms-DetailsRow-check
                    ms-DetailsRow-check--isHeader
                    {
                      height: 32px;
                    }
                    .ms-Fabric--isFocusVisible &:focus {
                      opacity: 1;
                    }
                    {
                      align-items: center;
                      background-color: transparent;
                      background: none;
                      border: none;
                      box-sizing: border-box;
                      cursor: default;
                      display: flex;
                      height: 32px;
                      justify-content: center;
                      margin-bottom: 0px;
                      margin-left: 0px;
                      margin-right: 0px;
                      margin-top: 0px;
                      opacity: 0;
                      outline: transparent;
                      padding-bottom: 0px;
                      padding-left: 0px;
                      padding-right: 0px;
                      padding-top: 0px;
                      position: relative;
                      vertical-align: top;
                      width: 40px;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    &:hover {
                      opacity: 1;
                    }

                data-automationid="DetailsRowCheck"
                data-is-focusable={true}
                data-selection-toggle={true}
                id="header3-check"
                role="checkbox"
              >
                <div
                  className=
                      ms-Check
                      {
                        height: 18px;
                        line-height: 1;
                        position: relative;
                        user-select: none;
                        vertical-align: top;
                        width: 18px;
                      }
                      &:before {
                        background: #ffffff;
                        border-radius: 50%;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        opacity: 1;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                      }
                      $checkHost:hover &, $checkHost:focus &, &:hover, &:focus {
                        opacity: 1;
                      }
                >
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-circle
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 18px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: 0px;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          color: WindowText;
                        }
                    data-icon-name="CircleRing"
                    role="presentation"
                  >
                    
                  </i>
                  <i
                    aria-hidden={true}
                    className=
                        ms-Check-check
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          color: #c8c8c8;
                          display: inline-block;
                          font-family: "FabricMDL2Icons";
                          font-size: 16px;
                          font-style: normal;
                          font-weight: normal;
                          height: 18px;
                          left: .5px;
                          opacity: 0;
                          position: absolute;
                          speak: none;
                          text-align: center;
                          top: 0px;
                          vertical-align: middle;
                          width: 18px;
                        }
                        &:hover {
                          opacity: 1;
                        }
                        @media screen and (-ms-high-contrast: active){& {
                          -ms-high-contrast-adjust: none;
                        }
                    data-icon-name="StatusCircleCheckmark"
                    role="presentation"
                  >
                    
                  </i>
                </div>
              </div>
            </span>
          </div>
          <div
            aria-colindex={2}
            aria-sort="none"
            className=
                ms-DetailsHeader-cell
                is-actionable
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-block;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0;
                  margin-left: 0;
                  margin-right: 0;
                  margin-top: 0;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 8px;
                  padding-right: 8px;
                  padding-top: 0;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                &:hover {
                  background: #f4f4f4;
                  color: #333333;
                }
                &:active {
                  background: #eaeaea;
                }
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="key"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 316,
              }
            }
          >
            <span
              className=

                  {
                    bottom: 0px;
                    display: block;
                    left: 0px;
                    position: absolute;
                    right: 0px;
                    top: 0px;
                  }
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header3-key-name "
                className=
                    ms-DetailsHeader-cellTitle
                    {
                      align-items: stretch;
                      box-sizing: border-box;
                      display: flex;
                      flex-direction: row;
                      justify-content: flex-start;
                      outline: transparent;
                      overflow: hidden;
                      padding-bottom: 0;
                      padding-left: 12px;
                      padding-right: 8px;
                      padding-top: 0;
                      position: relative;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                data-is-focusable={true}
                id="header3-key"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className=
                      ms-DetailsHeader-cellName
                      {
                        flex: 0 1 auto;
                        overflow: hidden;
                        text-overflow: ellipsis;
                      }
                  id="header3-key-name"
                >
                  key
                </span>
              </span>
            </span>
          </div>
          <div
            aria-hidden={true}
            className=
                ms-DetailsHeader-cellSizer
                {
                  background: transparent;
                  bottom: 0px;
                  cursor: ew-resize;
                  display: inline-block;
                  height: inherit;
                  outline: transparent;
                  overflow: hidden;
                  position: relative;
                  top: 0px;
                  width: 16px;
                  z-index: 1;
                }
                &::-moz-focus-inner {
                  border: 0px;
                }
                &:after {
                  background: #c8c8c8;
                  bottom: 0px;
                  content: "";
                  left: 50%;
                  opacity: 0;
                  position: absolute;
                  top: 0px;
                  width: 1px;
                }
                &:focus:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &:hover:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &$cellIsResizing:after {
                  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                {
                  margin-bottom: 0;
                  margin-left: -8px;
                  margin-right: -8px;
                  margin-top: 0;
                }
            data-is-focusable={false}
            data-sizer-index={0}
            onBlur={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            role="button"
          />
          <div
            aria-colindex={3}
            aria-sort="none"
            className=
                ms-DetailsHeader-cell
                is-actionable
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-block;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0;
                  margin-left: 0;
                  margin-right: 0;
                  margin-top: 0;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 8px;
                  padding-right: 8px;
                  padding-top: 0;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                &:hover {
                  background: #f4f4f4;
                  color: #333333;
                }
                &:active {
                  background: #eaeaea;
                }
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="name"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 316,
              }
            }
          >
            <span
              className=

                  {
                    bottom: 0px;
                    display: block;
                    left: 0px;
                    position: absolute;
                    right: 0px;
                    top: 0px;
                  }
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header3-name-name "
                className=
                    ms-DetailsHeader-cellTitle
                    {
                      align-items: stretch;
                      box-sizing: border-box;
                      display: flex;
                      flex-direction: row;
                      justify-content: flex-start;
                      outline: transparent;
                      overflow: hidden;
                      padding-bottom: 0;
                      padding-left: 12px;
                      padding-right: 8px;
                      padding-top: 0;
                      position: relative;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                data-is-focusable={true}
                id="header3-name"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className=
                      ms-DetailsHeader-cellName
                      {
                        flex: 0 1 auto;
                        overflow: hidden;
                        text-overflow: ellipsis;
                      }
                  id="header3-name-name"
                >
                  name
                </span>
              </span>
            </span>
          </div>
          <div
            aria-hidden={true}
            className=
                ms-DetailsHeader-cellSizer
                {
                  background: transparent;
                  bottom: 0px;
                  cursor: ew-resize;
                  display: inline-block;
                  height: inherit;
                  outline: transparent;
                  overflow: hidden;
                  position: relative;
                  top: 0px;
                  width: 16px;
                  z-index: 1;
                }
                &::-moz-focus-inner {
                  border: 0px;
                }
                &:after {
                  background: #c8c8c8;
                  bottom: 0px;
                  content: "";
                  left: 50%;
                  opacity: 0;
                  position: absolute;
                  top: 0px;
                  width: 1px;
                }
                &:focus:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &:hover:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &$cellIsResizing:after {
                  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                {
                  margin-bottom: 0;
                  margin-left: -8px;
                  margin-right: -8px;
                  margin-top: 0;
                }
            data-is-focusable={false}
            data-sizer-index={1}
            onBlur={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            role="button"
          />
          <div
            aria-colindex={4}
            aria-sort="none"
            className=
                ms-DetailsHeader-cell
                is-actionable
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border: none;
                  box-sizing: border-box;
                  color: #333333;
                  display: inline-block;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 12px;
                  font-weight: 400;
                  height: 32px;
                  line-height: inherit;
                  margin-bottom: 0;
                  margin-left: 0;
                  margin-right: 0;
                  margin-top: 0;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 8px;
                  padding-right: 8px;
                  padding-top: 0;
                  position: relative;
                  text-align: left;
                  text-overflow: ellipsis;
                  vertical-align: top;
                  white-space: nowrap;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: 1px;
                  content: "";
                  left: 1px;
                  outline: 1px solid #666666;
                  position: absolute;
                  right: 1px;
                  top: 1px;
                  z-index: 1;
                }
                &:hover {
                  background: #f4f4f4;
                  color: #333333;
                }
                &:active {
                  background: #eaeaea;
                }
            data-automationid="ColumnsHeaderColumn"
            data-is-draggable={false}
            data-item-key="value"
            draggable={false}
            role="columnheader"
            style={
              Object {
                "width": 316,
              }
            }
          >
            <span
              className=

                  {
                    bottom: 0px;
                    display: block;
                    left: 0px;
                    position: absolute;
                    right: 0px;
                    top: 0px;
                  }
            >
              <span
                aria-describedby={undefined}
                aria-haspopup={false}
                aria-label={undefined}
                aria-labelledby="header3-value-name "
                className=
                    ms-DetailsHeader-cellTitle
                    {
                      align-items: stretch;
                      box-sizing: border-box;
                      display: flex;
                      flex-direction: row;
                      justify-content: flex-start;
                      outline: transparent;
                      overflow: hidden;
                      padding-bottom: 0;
                      padding-left: 12px;
                      padding-right: 8px;
                      padding-top: 0;
                      position: relative;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #666666;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                data-is-focusable={true}
                id="header3-value"
                onClick={[Function]}
                onContextMenu={[Function]}
                role="button"
              >
                <span
                  className=
                      ms-DetailsHeader-cellName
                      {
                        flex: 0 1 auto;
                        overflow: hidden;
                        text-overflow: ellipsis;
                      }
                  id="header3-value-name"
                >
                  value
                </span>
              </span>
            </span>
          </div>
          <div
            aria-hidden={true}
            className=
                ms-DetailsHeader-cellSizer
                {
                  background: transparent;
                  bottom: 0px;
                  cursor: ew-resize;
                  display: inline-block;
                  height: inherit;
                  outline: transparent;
                  overflow: hidden;
                  position: relative;
                  top: 0px;
                  width: 16px;
                  z-index: 1;
                }
                &::-moz-focus-inner {
                  border: 0px;
                }
                &:after {
                  background: #c8c8c8;
                  bottom: 0px;
                  content: "";
                  left: 50%;
                  opacity: 0;
                  position: absolute;
                  top: 0px;
                  width: 1px;
                }
                &:focus:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &:hover:after {
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                &$cellIsResizing:after {
                  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4);
                  opacity: 1;
                  transition: opacity 0.3s linear;
                }
                {
                  margin-bottom: 0px;
                  margin-left: -16px;
                  margin-right: 0px;
                  margin-top: 0px;
                }
            data-is-focusable={false}
            data-sizer-index={2}
            onBlur={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            role="button"
          />
        </div>
      </div>
      <div
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          aria-describedby={undefined}
          aria-labelledby={undefined}
          className=
              ms-FocusZone
              {
                display: inline-block;
                min-height: 1px;
                min-width: 100%;
              }
          data-focuszone-id="FocusZone5"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="presentation"
        >
          <div
            className="ms-SelectionZone"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onKeyDownCapture={[Function]}
            onMouseDown={[Function]}
            onMouseDownCapture={[Function]}
            role="presentation"
          >
            <div
              className="ms-List"
              role="presentation"
            >
              <div
                className="ms-List-surface"
                role="presentation"
              >
                <div
                  className="ms-List-page"
                  role="presentation"
                  style={Object {}}
                >
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={0}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={1}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={2}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={3}
                    role="presentation"
                  />
                  <div
                    className="ms-List-cell"
                    data-automationid="ListCell"
                    data-list-index={4}
                    role="presentation"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
